--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,6 +160,8 @@ services:
         condition: service_started
       notes:
         condition: service_started
+      tasks:
+        condition: service_started
   widget-registry:
     build:
       context: ./backend/widget-registry
@@ -249,6 +251,47 @@ services:
     volumes:
       - notes_db_data:/var/lib/postgresql/data
 
+  tasks-db:
+    image: postgres:latest
+    container_name: tasks-db
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB_TASKS}
+    networks:
+      - elk
+    ports:
+      - "5435:5432"
+    volumes:
+      - tasks_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB_TASKS}"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 10s
+
+  tasks:
+    build:
+      context: ./backend/tasks
+      dockerfile: Dockerfile
+    container_name: tasks
+    ports:
+      - "8001:8001"
+    networks:
+      - elk
+    environment:
+      - PORT=8001
+      - ConnectionStrings__DefaultConnection=Host=tasks-db;Database=${POSTGRES_DB_TASKS};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
+      - ASPNETCORE_ENVIRONMENT=${NODE_ENV}
+      - GATEWAY_SECRET=${GATEWAY_SECRET}
+    restart: always
+    depends_on:
+      tasks-db:
+        condition: service_healthy
+    volumes:
+      - ./backend/tasks/Migrations:/app/Migrations
+
 networks:
   elk:
     driver: bridge
@@ -259,6 +302,8 @@ volumes:
   widget_registry_db_data:
     driver: local
   notes_db_data:
+    driver: local
+  tasks_db_data:
     driver: local
   esdata:
     driver: local
