--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,9 @@ jobs:
             - name: Restore dependencies
               run: dotnet restore tasks.csproj
             - name: Build
-              run: dotnet build --no-restore
+              run: dotnet build tasks.csproj --no-restore
             - name: Run tasks unit tests
-              run: dotnet test --no-build --verbosity normal
+              run: dotnet test tasks.csproj --no-build --verbosity normal
 
     gateway-unit-tests:
         runs-on: ubuntu-latest
