--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,63 @@
-# Frontend
+## Frontend
 NODE_ENV=development
 WATCHPACK_POLLING=true
 FRONTEND_DOMAIN=http://localhost:3000
+SENTRY_AUTH_TOKEN=YOUR_SENTRY_AUTH_TOKEN
+SENTRY_DSN_AUTH=YOUR_SENTRY_DSN
+SENTRY_DSN_FRONTEND=YOUR_SENTRY_DSN
+SENTRY_DSN_GATEWAY=YOUR_SENTRY_DSN
+SENTRY_DSN_WIDGET_REGISTRY=YOUR_SENTRY_DSN
+SENTRY_DSN_NOTES=YOUR_SENTRY_DSN
+SENTRY_SEND_DEFAULT_PII=true
 
-# Auth
+## Auth
 SPRING_DATASOURCE_URL=jdbc:postgresql://auth-db:5432/personal_dashboard_auth
 SPRING_DATASOURCE_USERNAME=postgres
-SPRING_DATASOURCE_PASSWORD=password
-JWT_SECRET=your_jwt_secret_here
+SPRING_DATASOURCE_PASSWORD=changeme
+JWT_SECRET=changeme
 JWT_ACCESS_EXPIRATION=10000
 JWT_REFRESH_EXPIRATION=3000000
+JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5841
 
-# DB
+## DB
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=changeme
 POSTGRES_DB_AUTH=personal_dashboard_auth
 POSTGRES_DB_WIDGET_REGISTRY=personal_dashboard_widget_registry
+POSTGRES_DB_NOTES=personal_dashboard_notes
+POSTGRES_DB_TASKS=personal_dashboard_tasks
 
-# Elasticsearch
+## Elasticsearch
 ELASTIC_PASSWORD=changeme
 
-# Logstash
+## Logstash
 LOGSTASH_HTTP_HOST=0.0.0.0
 LOGGING_LOGSTASH_SERVER=logstash:5044
 
-# Kibana
+## Kibana
 ELASTICSEARCH_HOSTS=http://elasticsearch:9200
 
-# Gateway
+## Gateway
 AUTH_URL=http://auth:8080
 AUTH_REDIRECT_URL=http://localhost:8080
 SPRING_PROFILES_ACTIVE=elk
 GATEWAY_SECRET=changeme
 GATEWAY_DOMAIN=http://localhost:4000
+LOG_LEVEL=info
+ENABLE_LOGSTASH=false
+LOGSTASH_HOST=logstash
+LOGSTASH_PORT=5044
+
 PROFILE=dev
+
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET=YOUR_GOOGLE_CLIENT_SECRET
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_REDIRECT_URI={baseUrl}/login/oauth2/code/{registrationId}
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_SCOPE=openid, profile, email
+
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_ID=YOUR_GITHUB_CLIENT_ID
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_CLIENT_SECRET=YOUR_GITHUB_CLIENT_SECRET
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI={baseUrl}/login/oauth2/code/{registrationId}
+SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GITHUB_SCOPE=user:email
+
+OBSIDIAN_API_KEY=YOUR_OBSIDIAN_API_KEY
