--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,6 +135,8 @@ jobs:
                   POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
                   POSTGRES_DB_AUTH=${{ secrets.POSTGRES_DB_AUTH }}
                   POSTGRES_DB_WIDGET_REGISTRY=${{ secrets.POSTGRES_DB_WIDGET_REGISTRY }}
+                  POSTGRES_DB_NOTES=${{ secrets.POSTGRES_DB_NOTES }}
+                  POSTGRES_DB_TASKS=${{ secrets.POSTGRES_DB_TASKS }}
                   AUTH_URL=${{ secrets.AUTH_URL }}
                   AUTH_REDIRECT_URL=${{ secrets.AUTH_REDIRECT_URL }}
                   GATEWAY_SECRET=${{ secrets.GATEWAY_SECRET }}
