--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -292,6 +292,40 @@ services:
     volumes:
       - ./backend/tasks/Migrations:/app/Migrations
 
+  event-bus:
+    image: bitnami/kafka:latest
+    container_name: event-bus
+    ports:
+      - "9094:9094"
+    environment:
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@event-bus:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://event-bus:9092,EXTERNAL://localhost:9094
+    healthcheck:
+      test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - elk
+
+  event-bus-ui:
+    image: docker.redpanda.com/redpandadata/console:latest
+    container_name: event-bus-ui
+    ports:
+      - "8081:8080"
+    environment:
+      - KAFKA_BROKERS=event-bus:9092
+    depends_on:
+      event-bus:
+        condition: service_healthy
+    networks:
+      - elk
+
 networks:
   elk:
     driver: bridge
