--- a/docker-compose.cloud.yml
+++ b/docker-compose.cloud.yml
@@ -34,6 +34,7 @@ services:
     environment:
       - NODE_ENV=production
       - NEXT_PUBLIC_GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
+      - NEXT_PUBLIC_WEATHER_API_KEY=${WEATHER_API_KEY}
     depends_on:
       - gateway
     networks:
