--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@graphql-codegen/near-operation-file-preset": "^3.1.0",
+    "@hookform/resolvers": "^5.1.1",
     "@next/eslint-plugin-next": "^15.3.3",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
@@ -41,6 +42,7 @@
     "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
     "react-grid-layout": "^1.5.1",
+    "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "react-resizable": "^3.0.5",
     "rehype-pretty-code": "^0.14.1",
