--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,7 +6,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx.cloud.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./ssl/cert.pem:/etc/ssl/certs/cert.pem:ro
+      - ./ssl/key.pem:/etc/ssl/private/key.pem:ro
     depends_on:
       - frontend
       - gateway
